--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -53,7 +53,7 @@
             <x>0</x>
             <y>0</y>
             <width>300</width>
-            <height>592</height>
+            <height>590</height>
            </rect>
           </property>
           <attribute name="label">
@@ -84,7 +84,7 @@
             <x>0</x>
             <y>0</y>
             <width>300</width>
-            <height>599</height>
+            <height>590</height>
            </rect>
           </property>
           <attribute name="label">
@@ -184,6 +184,12 @@
             </size>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout">
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
             <item>
              <widget class="QLineEdit" name="addressLineEdit">
               <property name="minimumSize">
